# bookly

./: Cargo.toml  README.md  ai.js  bookmarks.js  build.yml  crawler.js  events.js  index.html  package-lock.json  package.json  ui.js
.github/workflows/: build.yml
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/css/: app.css
src/js/: app.js  db.js  search.js  state.js
